# contract/openapi.json
@@ -5,7 +5,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8000/rpc"
+      "url": "http://localhost:8000/api"
     }
   ],
   "openapi": "3.1.1",
@@ -13,6 +13,33 @@
     "/holdings/getAll": {
       "post": {
         "operationId": "holdings.getAll",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "userId": {
+                    "type": "string"
+                  },
+                  "userSecret": {
+                    "type": "string"
+                  },
+                  "accountId": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "userId",
+                  "userSecret",
+                  "accountId"
+                ],
+                "additionalProperties": false
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "OK",
@@ -32,22 +59,34 @@
                               "null"
                             ],
                             "properties": {
-                              "ticker": {
+                              "symbol": {
                                 "type": [
-                                  "string",
+                                  "object",
                                   "null"
-                                ]
-                              },
-                              "name": {
-                                "type": [
-                                  "string",
-                                  "null"
-                                ]
+                                ],
+                                "properties": {
+                                  "symbol": {
+                                    "type": [
+                                      "string",
+                                      "null"
+                                    ]
+                                  },
+                                  "description": {
+                                    "type": [
+                                      "string",
+                                      "null"
+                                    ]
+                                  }
+                                },
+                                "required": [
+                                  "symbol",
+                                  "description"
+                                ],
+                                "additionalProperties": false
                               }
                             },
                             "required": [
-                              "ticker",
-                              "name"
+                              "symbol"
                             ],
                             "additionalProperties": false
                           },
@@ -74,6 +113,21 @@
                               "number",
                               "null"
                             ]
+                          },
+                          "currency": {
+                            "type": [
+                              "object",
+                              "null"
+                            ],
+                            "properties": {
+                              "code": {
+                                "type": "string"
+                              }
+                            },
+                            "required": [
+                              "code"
+                            ],
+                            "additionalProperties": false
                           }
                         },
                         "required": [
@@ -81,7 +135,8 @@
                           "units",
                           "price",
                           "open_pnl",
-                          "average_purchase_price"
+                          "average_purchase_price",
+                          "currency"
                         ],
                         "additionalProperties": false
                       }
